# markmodule

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGES.md  Makefile  Pipfile  README.md  generate_docs.py  hello.md.py  pyproject.toml  pyproject_bak.toml  setup.py  tox.ini
.github/workflows/: build.yml  tox.yml  zizmor.yml
dead_code/: md_module_support.py
docs/: TODO.md  contributing.md  stackoverflow.md
hello/: hello_module.md  hello_module.pyi
markmodule/: __init__.py  aaaaa_exec_markdown.pth  class_source.py  execute_md.py  generate_pyi.py  import_string.py  md_importer.py  string_loader.py
sample_module/: Makefile  README.html  index.html
sample_module/markdown_tests/: test_docstring_style.html  test_hello.html  test_labeled.html
sample_module/sample_module/: hello_module.html
scripts/: exercise_import_hello.py  exercise_import_string.py  exercise_md_importer.py  hello_module.md
test/: hello_module.pyi  test_class_source.py  test_import_string.py  test_md_importer.py  tox_banner.py
